# CloudMiningWebsite

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  celery.dockerfile  celerybeat-schedule.db  entrypoint.sh  manage.py  pyproject.toml  worker_start.sh
backend/config/: celery.py  settings.py  urls.py
backend/config/components/: app_settings.py  auth.py  celery_settings.py  db.py  statick.py  swagger.py
backend/src/: tests.py
backend/src/application/: admin.py  db_commands.py  models.py  tasks.py
backend/src/application/api/: urls.py
backend/src/application/migrations/: 0001_first_migration.py  0001_initial.py  0002_contract_alter_difficulty_options_and_more.py  0002_initial.py  0002_maintenancecost_alter_difficulty_options_and_more.py  0003_alter_contract_options_contract_is_paid.py  0003_alter_difficulty_id_alter_maintenancecost_id_and_more.py  0004_alter_btcprice_options_alter_contract_options_and_more.py  0004_alter_contract_contract_end_and_more.py  0005_btcprice.py  0005_rentalthcost.py  0006_alter_rentalthcost_id.py  0007_rename_coast_maintenancecost_cost_and_more.py  0008_cryptocurrencytousdtexchange.py  0009_delete_btcprice.py
backend/src/reviews/: admin.py  models.py
backend/src/reviews/api/: urls.py
backend/src/reviews/migrations/: 0001_initial.py  0002_initial.py
backend/src/users/: admin.py  constants.py  models.py  tasks.py  utils.py
backend/src/users/api/: urls.py
backend/src/users/email_templates/: change_email.html  confirm_account.html  reset_password.html
(+25 files in other folders)
